k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: default
spec:
  selector:
    app: nginx     
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 80  
  type: ClusterIP
